[package]
name = "leo-resolver"
version = "1.0.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Resolves implicit types in a Leo AST"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-ast]
path = "../ast"
version = "1.0.3"

[dependencies.leo-imports]
path = "../imports"
version = "1.0.3"

[dependencies.leo-typed]
path = "../typed"
version = "1.0.3"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.thiserror]
version = "1.0"
